--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Just the Docs Template
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 
-url: https://olimnotes.github.io
+url: https://ashishkin21.github.io/olimnotes.github.io
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Template Repository: https://github.com/ashishkin21/olimnotes.github.io
