--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,34 @@ url: https://ashishkin21.github.io/olimnotes.github.io
 
 aux_links:
   Template Repository: https://github.com/ashishkin21/olimnotes.github.io
+
+heading_anchors: true
+
+# show or hide edit time
+# page must have `last_modified_date` defined in the frontmatter
+last_edit_timestamp: true
+# uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
+# https://apidock.com/ruby/DateTime/strftime
+# last_edit_time_format: "%b %e %Y at %I:%M %p"
+
+# Google Analytics Tracking (optional)
+# Google Analytics 4 will replace Universal Analytics on July 1, 2023 https://support.google.com/analytics/answer/11583528
+# Supports a CSV of tracking ID strings (eg. "UA-1234567-89,G-1AB234CDE5")
+# ga_tracking: UA-2709176-10
+# ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (true/nil by default)
+
+# https://just-the-docs.github.io/just-the-docs/docs/configuration/#document-collections
+collections:
+  tests:
+    permalink: "/pages/:collection/:path/"
+    output: true
+  tutorials:
+    permalink: "/pages/:collection/:path/"
+    output: true
+
+just_the_docs:
+  collections:
+    tests:
+      name: Tests
+    tutorials:
+      name: Tutorials
